Search Functionality enabled

--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
     <!-- list of games funded by Sea Monster -->
     <h2>Our Games</h2>
     <p>Check out each of our games below!</p>
+
+    
     <div id="button-container">
+        <div>
+            <form id="searchForm">
+                <label for="searchForm"> Search For:</label>
+                <input type="text" id="search">
+                <button type="submit" id="searchBtn">Search</button>
+            </form>
+        </div>
         <button id="unfunded-btn">Show Unfunded Only</button>
         <button id="funded-btn">Show Funded Only</button>
         <button id="all-btn">Show All Games</button>
